workshop-real/examples/force-app/main/default/objects/VisitDetail__c/VisitDetail__c.object-meta.xml
<CustomObject>
    <description>訪問記録の詳細アクションアイテム。Master-Detail で StoreVisit__c に従属する。</description>
    <label>訪問詳細</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>詳細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>訪問詳細</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>