workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>アクションアイテムのカテゴリ</description>
    <label>カテゴリ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>商品配置</fullName>
            </value>
            <value>
                <fullName>販促物設置</fullName>
            </value>
            <value>
                <fullName>在庫確認</fullName>
            </value>
            <value>
                <fullName>価格交渉</fullName>
            </value>
            <value>
                <fullName>クレーム</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <default>true</default>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>