workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>アクションアイテムの詳細説明</description>
    <label>説明</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>