workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>アクションアイテムの期限日</description>
    <label>期限日</label>
    <type>Date</type>
</CustomField>