workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>アクションアイテムが完了したかどうか</description>
    <label>完了</label>
    <type>Checkbox</type>
</CustomField>