workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>優先度（1=最高 ～ 5=最低）</description>
    <label>優先度</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>