workshop-real/examples/force-app/main/default/objects/VisitDetail__c/fields/StoreVisit__c.field-meta.xml
<CustomField>
    <fullName>StoreVisit__c</fullName>
    <description>親の訪問記録</description>
    <label>訪問記録</label>
    <referenceTo>StoreVisit__c</referenceTo>
    <relationshipLabel>訪問詳細</relationshipLabel>
    <relationshipName>VisitDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>